testsuite/lab2-testsuite/good/subtyping/cmp_if_int_gte_double.cc
int main () {
	if (5 >= 3.0)
		let int y;
	else {}
	return 0;
}
