testsuite/lab2-testsuite/bad/redecl_var_after_block_4.cc
int main() {
	let int x, y;
	{
		let int z;
	}
	let int y;
	return 0;
}
